fix: Update JournalismPage excerpt handling and style for improved readability

--- a/style/main.scss
+++ b/style/main.scss
@@ -281,6 +281,11 @@ a {
   margin: 0;
   font-size: 0.95rem;
   line-height: 1.5;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .journalism-link {
